plugins {
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'java'
}

def loadEnvFile = { String path ->
    def envMap = [:]
    def envFile = file(path)

    if (!envFile.exists()) {
        return envMap
    }

    envFile.eachLine('UTF-8') { rawLine ->
        def line = rawLine?.trim()
        if (!line || line.startsWith('#')) {
            return
        }

        def separatorIndex = line.indexOf('=')
        if (separatorIndex <= 0) {
            return
        }

        def key = line.substring(0, separatorIndex).trim()
        def value = line.substring(separatorIndex + 1).trim()

        if ((value.startsWith('"') && value.endsWith('"')) || (value.startsWith("'") && value.endsWith("'"))) {
            value = value.substring(1, value.length() - 1)
        }

        envMap[key] = value
    }

    return envMap
}

def bootRunEnv = [:]
bootRunEnv.putAll(loadEnvFile('.env'))
bootRunEnv.putAll(loadEnvFile('.env.local'))

group = 'com.skala'
version = '0.0.1-SNAPSHOT'
description = 'AXIS Spring Boot REST API server'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

// AWS SDK V2 BOM — 의존성 버전 일관 관리 (sesv2 등)
dependencyManagement {
    imports {
        mavenBom 'software.amazon.awssdk:bom:2.27.21'
    }
}

dependencies {
    // 핵심 웹
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // DB
    runtimeOnly 'org.postgresql:postgresql'

    // AWS SES V2 (이메일 발송 — IRSA 통한 IAM credentials 자동 주입)
    // sts: IRSA web identity token → IAM 자격증명 교환에 필수 (SDK v2 는 기본 의존성 아님)
    implementation 'software.amazon.awssdk:sesv2'
    implementation 'software.amazon.awssdk:sts'

    // Flyway 마이그레이션 (Spring Boot 3.3 + Flyway 10 — postgresql 모듈 별도 의존성 필수)
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // API 문서
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

    // JSON
    implementation 'com.fasterxml.jackson.core:jackson-databind'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    // 테스트
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'com.h2database:h2'
}

tasks.named('test') {
    useJUnitPlatform()
    testLogging {
        events 'failed'
        exceptionFormat 'full'
    }
}

tasks.named('bootJar') {
    archiveFileName = 'axis-backend.jar'
}

tasks.named('bootRun') {
    bootRunEnv.each { key, value ->
        if (!System.getenv().containsKey(key)) {
            environment key, value
        }
    }
}
